cmake_minimum_required(VERSION 3.10)
project(AtCoder)

set(CMAKE_CXX_STANDARD 11)

add_executable(AtCoder Tutorial/practice1.cpp QiitaPractice/practice1.cpp QiitaPractice/practice2.cpp QiitaPractice/practice3.cpp QiitaPractice/practice4.cpp QiitaPractice/practice5.cpp QiitaPractice/practice6.cpp QiitaPractice/practice7.cpp QiitaPractice/practice8.cpp QiitaPractice/practice9.cpp QiitaPractice/practice9_correct.cpp QiitaPractice/practice10.cpp memo.cpp QiitaPractice/abc070b.cpp QiitaPractice/abc055b.cpp QiitaPractice/abc087c.cpp QiitaPractice/abc060b.cpp abc124/a.cpp abc124/b.cpp abc124/c.cpp abc124/d.cpp abc124/d2.cpp)