cmake_minimum_required(VERSION 3.10)
project(Robe)

set(CMAKE_CXX_STANDARD 11)

add_executable(Robe main2.cpp main3.cpp main5.cpp main6.cpp main7.cpp main8.cpp main9.cpp main10.cpp main11.cpp main12.cpp main13.cpp main13_2.cpp main14.cpp main15.cpp main16.cpp main17.cpp main18.cpp main19.cpp main19_2.cpp main20.cpp main22.cpp main23.cpp main24.cpp main24_2.cpp main26.cpp main27.cpp main27.h main28.cpp main29.cpp main29_2.cpp main31.cpp main32.cpp main33.cpp main34.cpp main35.cpp main36.cpp main37.cpp main38.cpp main39.cpp main40.cpp main41.cpp main43.cpp main43_2.cpp main44.cpp main49.cpp main51.cpp main52.cpp main54.cpp main55.cpp)